# FFT-project

./: README.md  index.html  monte_carlo.h  nufft.h
MCFIntegration/: CMakeLists.txt
MCFIntegration/include/: cuda_monte_carlo_fourier_transform_integration.h  cuda_monte_carlo_fourier_transform_integration_kernel.h
MCFIntegration/src/: cuda_monte_carlo_fourier_transform_integration.cu
MCFIntegration/test/: test.cpp
